Closed
Bug 121931
Opened 23 years ago
Closed 23 years ago
ActiveX control - prompt changes break form submit
Categories
(Core Graveyard :: Embedding: ActiveX Wrapper, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: cajunman4life, Assigned: adamlock)
Details
Attachments
(1 file)
19.42 KB,
patch
|
chak
:
review+
|
Details | Diff | Splinter Review |
A "submit" style button that submits information entered into a web from does
not work in the ActiveX control. Information can be entered, but when the
"submit" button is clicked, the browser does nothing.
Comment 1•23 years ago
|
||
Reporter: In order to fix this bug, we need a bit more information from you.
Steps to reproduce (including URL):
Actual results:
Expected results:
I doubt that Mozilla even claims to support ActiveX controls.
Reporter | ||
Comment 2•23 years ago
|
||
This isn't about supporting ActiveX controls... I'm talking about the Mozilla
ActiveX Control. When I use it in my program, and when you go to any webpage
that accepts text input and has some kind of a submit button (try any web search
site, such as www.altavista.com), when you click the submit button it does
nothing, whereas it should submit the data in the textbox.
Confirming.
It looks as though the form submit warning about submitting data on an insecure
channel is being displayed via nsIPrompt::ConfirmEx. The ActiveX controls prompt
service hasn't implemented ConfirmEx so nothing is displayed. It used to be
displayed with ConfirmCheck so it worked fine before now.
The workaround for the time being is add a line like this to MozillaControl
profile's prefs.js so the prompt is not displayed when submitting forms.
user_pref("security.warn_submit_insecure", false);
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Submit for web forms → ActiveX control - prompt changes break form submit
This patch fixes the problem.
It's pretty large because I bit the bullet and wrote a dialog class that
handles ConfirmEx, ConfirmCheck, Prompt, PromptPassword &
PromptUsernameAndPassword. It can be extended at some point to also support
AlertCheck & Select but this will suffice for now.
Comment 6•23 years ago
|
||
Comment on attachment 66594 [details] [diff] [review]
Patch fixes the problem
r=chak
Attachment #66594 -
Flags: review+
Fix is checked in 0.9.8 branch and trunk
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•