Implement ConfirmEx and various Prompt methods on nsIPrompt. b=121931 r=chak@netscape.com a=asa@mozilla.org