embedding/browser/activex/src/control/resource.h
@@ -7,10 +7,8 @@
 #define IDI_MOZILLABROWSER              201
 #define IDC_CHECKMSG                    201
 #define IDR_POPUP_PAGE                  202
-#define IDC_BUTTON1                     202
 #define IDR_POPUP_DOCUMENT              202
 #define IDR_POPUP_LINK                  203
-#define IDC_BUTTON2                     203
 #define IDR_POPUP_CLIPBOARD             204
 #define IDC_QUESTION                    204
 #define IDR_POPUP_TEXT                  204
@@ -20,15 +18,30 @@
 #define IDR_POPUP_IMAGE                 206
 #define IDC_PPAGE_MARKER                206
 #define IDD_PROMPTUSERNAMEANDPASSWORD   207
+#define IDD_PROMPTUSERPASS              207
 #define IDD_PROMPTPASSWORD              208
 #define IDC_TYPE                        208
 #define IDD_PROPERTIES                  209
 #define IDC_PROTOCOL                    209
 #define IDD_PPAGE_LINK                  210
 #define IDC_ADDRESS                     210
+#define IDD_CONFIRMEX                   211
+#define IDC_VALUE                       213
+#define IDC_USERNAME                    214
+#define IDC_PASSWORD                    215
 #define IDS_LOCATEMOZILLA               1000
 #define IDS_LOCATEMOZILLATITLE          1001
 #define IDS_CANNOTCREATEPREFS           1002
+#define IDS_CONFIRMEX_OK                2000
+#define IDS_CONFIRMEX_CANCEL            2001
+#define IDS_CONFIRMEX_YES               2002
+#define IDS_CONFIRMEX_NO                2003
+#define IDS_CONFIRMEX_SAVE              2004
+#define IDS_CONFIRMEX_DONTSAVE          2005
+#define IDS_CONFIRMEX_REVERT            2006
+#define IDC_BUTTON0                     2200
+#define IDC_BUTTON1                     2201
+#define IDC_BUTTON2                     2202
 #define ID_BROWSE_BACK                  32768
 #define ID_DOCUMENT_BACK                32768
 #define ID_BROWSE_FORWARD               32769
@@ -67,7 +80,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        211
 #define _APS_NEXT_COMMAND_VALUE         32792
-#define _APS_NEXT_CONTROL_VALUE         211
+#define _APS_NEXT_CONTROL_VALUE         216
 #define _APS_NEXT_SYMED_VALUE           102
 #endif
 #endif
